fix: Hide .settings-toggle on mobile (due to it beeing inside a non-clickable area it is not in on desktop

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -829,6 +829,10 @@ body:not(.loaded) #scrollTopBtn {
         right: 0;
         border-radius: 50% 0px 0px 0px;
     }
+
+    button.settings-toggle {
+        display: none;
+    }
 }
 
 #settingsBtn:hover svg {
